<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeScreenActivity">

    <TextView
        android:id="@+id/wel_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="@string/welcome_en"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/wel_hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wel_en"
        android:padding="30dp"
        android:text="@string/welcome_hi"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:text="@string/skip"
        android:textSize="25sp" />
</RelativeLayout>