<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/instr_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions_en"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:padding="30dp"/>

    <TextView
        android:id="@+id/instr_hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions_hi"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:padding="30dp"
        android:layout_below="@id/instr_en"/>

    <Button
        android:id="@+id/bt_skip_instructions"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:text="@string/skip"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:hapticFeedbackEnabled="true"/>
</RelativeLayout>